--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -7,7 +7,7 @@
     flex-wrap: nowrap;
     justify-content: center;
     background-color: white;
-    border-radius: 10px 0 0 10px;
+    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
     padding: 2rem 2rem;
     width: 40%;
 }
@@ -25,6 +25,7 @@ h2 {
     font-weight: 900 !important;
     font-size: 18px !important;
     margin-bottom: 2rem !important;
+    color: #485761 !important;
 }
 
 .container {
