--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -8,6 +8,7 @@
     justify-content: center;
     background-color: white;
     box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+    border-radius: .3125em;
     padding: 2rem 2rem;
     width: 40%;
 }
