--- a/src/components/Select/Select.css
+++ b/src/components/Select/Select.css
@@ -1,4 +1,13 @@
 select {
+    font-weight: 400;
     padding: 10px 10px;
+    letter-spacing: .025em;
+    outline: 0;
+    border-radius: .3125em;
+    border: 1px solid #01C3A7;
+    color: #FFF;
     cursor: pointer;
+    background-color: #01C3A7;
+    border-bottom: 1px solid #01907c;
+    box-shadow: 0 1px 1px -1px #8C9DA1;
 }
